# otters

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  changelog.md  pyproject.toml  requirements.txt
Report Creator/: config.yaml  data_loader.py  main.py  requirements.txt
dark mode/: theme.css
docs/: conf.py  design_considerations.rst  eps_tools.html  index.html  index.rst  otters.drive.rst  otters.html  otters.model.rst  otters.rst  otters.vis.rst  otters.wrangle.rst  search.js
docs/_autosummary/: otters.drive.ExPS.DowntimeEvent.__init__.rst  otters.drive.ExPS.ExPS.createPPT.rst  otters.drive.ExPS.Plot.addAvgProdLine.rst  otters.drive.ExPS.Plot.addLegendLabels.rst  otters.drive.ExPS.Plot.addLowAchievedLine.rst  otters.drive.ExPS.Plot.addScatter.rst  otters.drive.ExPS.Plot.full_setup.rst  otters.drive.ExPS.Plot.show.rst  otters.drive.connectors.get_bearer_auth.rst  otters.drive.ppt_gen.PPTGen.ExPSStyleName.rst  otters.drive.ppt_gen.PPTGen.__init__.rst  otters.drive.ppt_gen.PPTGen.addSlide.rst  otters.model.Regression.LinearRegression.score.rst  otters.model.Regression.LinearRegression.set_score_request.rst  otters.model.Regression.Model.__init__.rst  otters.model.Regression.Models.__init__.rst  otters.model.Regression.Models.rst  otters.model.Regression.Models.tabulateModels.rst  otters.model.Regression.Regression.getCVRMSE.rst  otters.model.Regression.Regression.getRegEquation.rst  otters.model.Regression.Regression.regress.rst  otters.model.VirtualMeter.AHU.rst  otters.model.VirtualMeter.VirtualMeter.cleanColNamesEMS.rst  otters.vis.graph.Plot.addScatter.rst  otters.vis.graph.Plot.rst  otters.vis.graph.Plot.setYAxisRange.rst  otters.wrangle.db_loader.rst  otters.wrangle.file_loader.getFiles.rst  otters.wrangle.file_loader.get_table_gaz.rst  otters.wrangle.file_loader.get_table_tarif_M.rst  (+24 more)
docs/source/: conf.py  (+2 more)
eps_tools/: requirements.txt
otters/: requirements.txt
pdocs/: index.html  otters.html  search.js
reporters/: ExPS.py
sphinx_docs/: conf.py  otters.drive.rst  otters.vis.rst
tests/: test_timetools.py  tests.ipynb
(+1052 files in other folders)
