[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel", "pandas", "pyyaml", "xlwings"]

[project]
name = "otters"
version = "0.1.2-beta"
description = "Useful functions and structures for energy analysis and data handling"
readme = "README.md"
authors = [{ name = "Luca LaFontaine", email = "lafoluca@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["energy analysis", "data science", "psychrometrics"]
dependencies = [
    "pandas", 
    "pyyaml",
    "xlwings",
# "pywin32>=306", 
#    "plotly",
#    "kaleido==0.1.0.post1",
#    "pdoc",
]

requires-python = ">=3.9"

[project.optional-dependencies]


[project.urls]
Homepage = "https://github.com/LucaLaFontaine/otters"

[project.scripts]
# otters = "otters.__main__:main"